# apoll

./: .env  Cargo.toml  sqlx-data.json
.github/workflows/: general.yml
configuration/: base.yml
migrations/: 20220531134013_create_users_and_polls.sql  20220620115634_create_suggestion_and_votes.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  startup.rs  telemetry.rs  user_session.rs  utils.rs
src/domain/: mod.rs  poll_form.rs
src/middleware/: mod.rs  validate_poll.rs
src/routes/: mod.rs  new_poll.rs
src/routes/poll/: get.rs  get_new.rs  mod.rs  post_join.rs  post_new.rs  post_suggest.rs
tests/: helpers.rs  main.rs
tests/api/: get_poll.rs  helpers.rs  main.rs  new_poll.rs
tests/api/poll/: create.rs  get.rs  join.rs  mod.rs  suggest.rs
