[package]
name = "apoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "apoll"

[dependencies]
actix-web = "4"
config = { version = "0.13.1", features = ["yaml"] }
reqwest = "0.11.10"
serde = "1.0.137"
serde-aux = "3.0.1"
serde_json = "1.0.81"
sqlx = { version = "0.5.13", default-features = false, features = [ "runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate", "offline"]}
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "1.1.1", features = ["v4"] }
