[package]
name = "apoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "apoll"

[dependencies]
actix-web = "4"
anyhow = "1.0.57"
config = { version = "0.13.1", features = ["yaml"] }
serde = "1.0.137"
serde-aux = "3.0.1"
thiserror = "1.0.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4"] }
validator = { version = "0.15.0", features = ["derive"] }

[dependencies.sqlx]
version = "0.5.13"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["json", "rustls-ts"]

[dev-dependencies]
claim = "0.5.0"
fake = "2.4.3"
serde_json = "1.0.81"
tokio = { version = "1", features = ["macros", "rt"] }