[package]
name = "apoll"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "apoll"

[dependencies]
actix-web = "4"
actix-web-lab = "0.16"
anyhow = "1.0.57"
config = { version = "0.13.1", features = ["yaml"] }
serde = "1.0.137"
serde-aux = "3.0.1"
thiserror = "1.0.31"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
uuid = { version = "0.8.1", features = ["v4", "serde"] }
validator = { version = "0.15.0", features = ["derive"] }
tracing = "0.1.34"
tracing-log = "0.1.3"
tracing-bunyan-formatter = "0.3.2"
tracing-subscriber = { version = "0.3.11", features = ["registry", "env-filter"] }
tracing-actix-web = "0.5.1"

[dependencies.sqlx]
version = "0.5.7"
default-features = false
features = [
    "runtime-actix-rustls",
    "macros",
    "postgres",
    "uuid",
    "chrono",
    "migrate",
    "offline"
]

[dependencies.reqwest]
version = "0.11.10"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claim = "0.5.0"
fake = "2.4.3"
once_cell = "1.12.0"
serde_json = "1.0.81"
